refactor(preferences): simplify tab context organizer preferences
- Remove submenu_label preference (fixed to 'Move Tab')
- Remove menu_position preference (auto positioning)
- Rename include_containers to include_container
- Rename include_devices to include_device
- Add include_workspace preference for workspace options
- Update CSS media queries with new preference names
- Update JavaScript preference functions
- Simplify configuration for future extensibility

The mod now has 4 simple preferences:
- enabled (general toggle)
- include_workspace (move to another workspace)
- include_device (send to another device)
- include_container (open in another container)

--- a/mods/tab-context-organizer/userChrome.css
+++ b/mods/tab-context-organizer/userChrome.css
@@ -8,20 +8,26 @@
   /* Hide original tab movement items to reorganize them */
   #context_moveToStart,
   #context_moveToEnd,
-  #context_moveTabOptions,
   #context_moveToNewWindow {
     display: none !important;
   }
 
+  /* Conditionally hide workspace options based on preference */
+  @media not (-moz-bool-pref: "mod.tab_context_organizer.include_workspace") {
+    #context_moveTabOptions {
+      display: none !important;
+    }
+  }
+
   /* Conditionally hide container options based on preference */
-  @media not (-moz-bool-pref: "mod.tab_context_organizer.include_containers") {
+  @media not (-moz-bool-pref: "mod.tab_context_organizer.include_container") {
     #context_reopenInContainer {
       display: none !important;
     }
   }
 
   /* Conditionally hide device options based on preference */
-  @media not (-moz-bool-pref: "mod.tab_context_organizer.include_devices") {
+  @media not (-moz-bool-pref: "mod.tab_context_organizer.include_device") {
     #context_sendTabToDevice {
       display: none !important;
     }
